--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
 aiodns==2.0.0
-aiohttp==3.7.4
+aiohttp==3.7.4.post0
 asyncio==3.4.3
 cachetools==4.2.1
 cchardet==2.1.7
 dnspython==2.1.0
-gpytranslate==0.2.2
+gpytranslate==0.3.1
 pymongo==3.11.3
-pyrogram==1.1.13
+pyrogram==1.2.5
 python-dateutil==2.8.1
 pyyaml==5.4.1
-regex==2020.11.13
+regex==2021.3.17
 speedtest-cli==2.1.2
 tgcrypto==1.2.2
 tswift==0.7.0
